反压问题定位以及解决